# phototool-svn

trunk/PhotoTool/: AUTHORS  ChangeLog  Doxyfile.in  Makefile.am  PhotoTool  TODO  autogen.sh  configure.in  phototool
trunk/PhotoTool/include/: Makefile.am
trunk/PhotoTool/include/phototool/: Makefile.am  PhotoEditPlugin.h  PhotoTool.h  PluginBase.h
trunk/PhotoTool/include/wx/: Makefile.am  sqlite.h
trunk/PhotoTool/plugins/: Makefile.am
trunk/PhotoTool/plugins/tester/: Makefile.am  Tester.cxx
trunk/PhotoTool/share/phototool/export/: export.html
trunk/PhotoTool/share/phototool/wxd/: PhotoTool.wdr  PhotoTool_wdr.xrc
trunk/PhotoTool/share/wxd/: PhotoTool_wdr.xrc
trunk/PhotoTool/src/: AboutDialog.cxx  AboutDialog.h  Album.cxx  Album.h  Camera.cxx  Camera.h  Config.h  DateTime.cxx  DateTime.h  DateTimeDialog.cxx  DateTimeDialog.h  EditDialog.cxx  EditDialog.h  EditPage.cxx  EditPage.h  ExportDialog.cxx  ExportDialog.h  Filters.cxx  Filters.h  Frame.cxx  Frame.h  Image.cxx  Image.h  ImportDialog.cxx  ImportDialog.h  InputDialog.cxx  InputDialog.h  Library.cxx  Library.h  LibraryEvent.cxx  LibraryEvent.h  LibraryView.cxx  LibraryView.h  ListDialog.cxx  ListDialog.h  Location.cxx  Location.h  LookupList.cxx  LookupList.h  LookupPage.cxx  (+52 more)
trunk/PhotoTool/src/icons/: about.xpm  album.xpm  edit.xpm  exit.xpm  help.xpm  import.xpm  location.xpm  prefs.xpm  show.xpm  trash.xpm  zoom.xpm
trunk/PhotoTool/wxd/: PhotoTool.wdr  PhotoTool_wdr.xrc
