
AC_INIT(src/PhotoTool.cxx)
AC_CONFIG_AUX_DIR(config)

dnl Initialize automake
AM_INIT_AUTOMAKE(PhotoTool, 0.1)
AM_CONFIG_HEADER(include/config.h)

dnl Check for required programs
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_CXX

dnl wxWidgets configuration
AC_PATH_PROG(WXCONFIG, wx-config, no)
if test "$WXCONFIG" = "xno"; then
    AC_MSG_ERROR([wx-config not found,  wxWidgets required.])
fi

WX_CXXFLAGS="`$WXCONFIG --cxxflags`"
WX_CPPFLAGS="`$WXCONFIG --cppflags`"
WX_LIBS="`$WXCONFIG --libs`"

CXXFLAGS="$CXXFLAGS $WX_CPPFLAGS"
CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
AC_SUBST(WX_LIBS)

dnl TODO: sqlite.cxx looks for these dynamically at runtime
dnl wxSqlite + sqlite
dnl AC_CHECK_HEADERS(sqlite.h)
dnl AC_CHECK_LIB(sqlite, sqlite_open)

dnl exif
AC_CHECK_HEADERS("libexif/exif-data.h")
AC_CHECK_LIB(exif, exif_data_new)

dnl Debugging
AC_ARG_ENABLE(debug, [  --enable-debug          Compile with debugging information], 
              enable_debug=$enableval, enable_debug=no)

if test "x$enable_debug" = "xyes"; then
    CXXFLAGS="$CXXFLAGS -DDEBUG -g"
    CPPFLAGS="$CPPFLAGS -DDEBUG -g"
    LDFLAGS="$LDFLAGS -g"
fi

dnl Program data paths
AC_MSG_CHECKING(for installation prefix)
if test "x$prefix" = "xNONE"; then
    prefix=$ac_default_prefix
    data_prefix=prefix
fi
AC_MSG_RESULT($prefix)

dnl Testing
AC_ARG_ENABLE(testing, [  --enable-testing Testing, run from build directory], 
              enable_testing=$enableval, enable_testing=no)
if test "x$enable_testing" = "xyes"; then
    CXXFLAGS="$CXXFLAGS -DTESTING"
    CPPFLAGS="$CPPFLAGS -DTESTING"
    data_prefix=".."
fi

AC_DEFINE_UNQUOTED(PHOTOTOOL_PREFIX, _T("$data_prefix"), 
                   [PhotoTool installation prefix])

dnl Doxygen documentation
AC_MSG_CHECKING(for doxygen)
AC_ARG_ENABLE(docs,  [  --enable-docs           Generate doxygen documentation],
              enable_docs=$enableval, enable_docs=no)

AC_PATH_PROG(DOXYGEN, doxygen, no)
if test "x$enable_docs" = "xyes"; then
    if test "$DOXYGEN" = "xno"; then
        enable_docs=no
        AC_MSG_ERROR([Cannot build documentation, Doxygen not found.])
    fi
fi

# Global options
CPPFLAGS="$CPPFLAGS -Wall -W"
CXXFLAGS="$CXXFLAGS -Wall -W"

dnl Makefiles to output
AC_OUTPUT([
    Doxyfile
    Makefile

    include/Makefile
    include/wx/Makefile
    include/phototool/Makefile

    src/Makefile

    plugins/Makefile
    plugins/tester/Makefile
])

